tests/negative/test_expr_arr_empty.orb
fnc main() () {
    arr (i32[]);
};